// Vitest Snapshot v1

exports[`builders test (node cases) > case build > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN npm config set registry https://registry.npmmirror.com

# 将 package.json 拷贝到容器中
COPY package.json .

# 安装依赖
RUN npm install

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 运行编译
RUN npm run build

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"npm\\", \\"run\\", \\"start:prod\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case create-next-app-pnpm > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN npm config set registry https://registry.npmmirror.com

# 安装 pnpm
RUN npm install -g pnpm@7.2.1

# 将这些文件拷贝到容器中
COPY package.json pnpm-lock.yaml ./

# 为 pnpm 设置的环境变量
ENV CI=true

# 安装依赖
RUN pnpm install --prefer-offline --shamefully-hoist

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 运行编译
RUN pnpm run build

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"npm\\", \\"run\\", \\"start\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case create-next-app-yarn > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN yarn config set registry https://registry.npmmirror.com

# 将这些文件拷贝到容器中
COPY package.json yarn.lock ./

# 安装依赖
RUN yarn install --non-interactive --prefer-offline

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 运行编译
RUN yarn run build

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"npm\\", \\"run\\", \\"start\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case create-nuxt-app > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN npm config set registry https://registry.npmmirror.com

# 将这些文件拷贝到容器中
COPY package.json package-lock.json ./

# 安装依赖
RUN npm ci

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 运行编译
RUN npm run build

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"npm\\", \\"run\\", \\"start\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case create-react-app > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN npm config set registry https://registry.npmmirror.com

# 将这些文件拷贝到容器中
COPY package.json package-lock.json ./

# 安装依赖
RUN npm ci

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 运行编译
RUN npm run build

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"npm\\", \\"run\\", \\"start\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case expressjs > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN yarn config set registry https://registry.npmmirror.com

# 将这些文件拷贝到容器中
COPY package.json yarn.lock ./

# 安装依赖
RUN yarn install --non-interactive --prefer-offline

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"npm\\", \\"run\\", \\"start\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case none > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"node\\", \\"test/index.js\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md",
  },
}
`;

exports[`builders test (node cases) > case npm > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 安装指定版本的 npm
RUN npm install -g npm@5.10.0

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN npm config set registry https://registry.npmmirror.com

# 将 package.json 拷贝到容器中
COPY package.json .

# 安装依赖
RUN npm install

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"node\\", \\"index.js\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case package-lock > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 安装指定版本的 npm
RUN npm install -g npm@5.10.0

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN npm config set registry https://registry.npmmirror.com

# 将这些文件拷贝到容器中
COPY package.json package-lock.json ./

# 安装依赖
RUN npm ci

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"node\\", \\"index.js\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case pnpm > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN npm config set registry https://registry.npmmirror.com

# 安装 pnpm
RUN npm install -g pnpm@7.2.1

# 将这些文件拷贝到容器中
COPY package.json pnpm-lock.yml ./

# 为 pnpm 设置的环境变量
ENV CI=true

# 安装依赖
RUN pnpm install --prefer-offline --shamefully-hoist

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"node\\", \\"index.js\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case sveltekit-cli-node-adapter > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN npm config set registry https://registry.npmmirror.com

# 将 package.json 拷贝到容器中
COPY package.json .

# 安装依赖
RUN npm install

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 运行编译
RUN npm run build

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"npm\\", \\"run\\", \\"preview\\", \\"--\\", \\"--host\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case yarn1 > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用速度更快的国内镜像源
RUN yarn config set registry https://registry.npmmirror.com

# 将这些文件拷贝到容器中
COPY package.json yarn.lock ./

# 安装依赖
RUN yarn install --non-interactive --prefer-offline

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"node\\", \\"index.js\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;

exports[`builders test (node cases) > case yarn2 > should have correct outputs 1`] = `
{
  "dockerfile": "# 由 Dockerpacks 自动生成
# 本 Dockerfile 可能不能完全覆盖您的项目需求，若遇到问题请根据实际情况修改或询问客服

# 使用基于 alpine 的 node 官方镜像
FROM node:lts-alpine

# 设置容器内的当前目录
WORKDIR /app

# 使用国内镜像源加速安装 yarn 2.4.3
RUN npm install -g yarn@2.4.3 --registry=\\"https://registry.npmmirror.com\\"

# 使用速度更快的国内镜像源
RUN yarn config set npmRegistryServer https://registry.npmmirror.com

# 将这些文件拷贝到容器中
COPY package.json yarn.lock ./

# 安装依赖
RUN yarn install --immutable

# 将包括源文件在内的所有文件拷贝到容器中（在 .dockerignore 中的文件除外）
COPY . .

# 设置环境变量
ENV NODE_ENV=production HOST=0.0.0.0

# 运行项目
CMD [\\"node\\", \\"index.js\\"]

# 服务暴露的端口
EXPOSE 3000",
  "files": Map {
    ".dockerignore" => ".git
.gitignore
.dockerignore
Dockerfile*
LICENSE
*.md
node_modules",
  },
}
`;
